# scoutlit

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
backend/: Dockerfile  main.py
backend/app/: main.py
backend/app/models/: health.py  paper_search.py  search.py
backend/app/routers/: health.py  paper_search.py  search.py
backend/app/services/: arxiv_async.py  chunker.py  embedding.py  paper_deduplicator.py  search_orchestrator.py  semantic_scholar_async.py  vector_store.py
frontend/: Dockerfile  eslint.config.js  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
src/: cli.py
src/classification/: __init__.py  paper_classifier.py
src/embedding/: __init__.py  chunker.py  embedder.py  store.py
src/gaps/: __init__.py  gap_detector.py
src/models/: paper.py
src/retrieval/: __init__.py  arxiv_client.py  semantic_scholar_client.py
src/synthesis/: __init__.py  review_synthesizer.py
tests/: test_chunker.py  test_classification.py  test_deduplication.py  test_embed_store.py  test_error_handler.py  test_health.py  test_retrieval.py  test_search_integration.py  test_synthesis.py  test_vector_store.py
