[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "scoutlit"
version = "0.1.0"
description = "AI system for autonomous academic literature retrieval, classification, and review synthesis"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.49.0",
    "httpx>=0.27.0",
    "pydantic>=2.7.0",
    "tenacity>=9.0.0",
    "rich>=13.0.0",
    "arxiv>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
scoutlit = "scoutlit.cli:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
